--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
               <div>
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト<br />
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト
+                testト
               </div>
               <a class="link_btn" href="./profile.html">Go!</a>
             </div>
