--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/toy01.jpg" />
+              <img src="./images/toy04.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
@@ -61,7 +61,7 @@
 
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/toy02.jpg" />
+              <img src="./images/刺繡いちご.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">WORKS</p>
